Documentation edits made through Mintlify web editor

--- a/lovable/how-it-works.mdx
+++ b/lovable/how-it-works.mdx
@@ -1,14 +1,12 @@
 ---
-title: How it Works
-label: How it Works
-slug: how-it-works
-description: >-
-  Add real native device features to your Lovable-generated app and deploy to
-  App Stores - no native code required.
-visibility: PUBLIC
+title: "How it Works"
+label: "How it Works"
+slug: "how-it-works"
+description: "Add real native device features to your Lovable-generated app and deploy to App Stores - no native code required."
+visibility: "PUBLIC"
 ---
 
-<Embed src="https://youtu.be/n5C5EvdJ584?si=w8zHbB-SFrly8RFs" />
+<iframe src="https://www.youtube.com/embed/n5C5EvdJ584" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
 
 ## **Overview**
 
@@ -38,15 +36,11 @@ import despia from 'despia-native';
 
 Despia manages the complete app store deployment process:
 
-* Automatic build generation for iPhone, iPad, Vision Pro, and Android devices
-
-* Automated code signing and certificate management
-
-* Direct submission to App Store and Google Play
-
-* One-click deployment with built-in CI/CD pipelines
-
-* Over-the-air updates without app store review
+- Automatic build generation for iPhone, iPad, Vision Pro, and Android devices
+- Automated code signing and certificate management
+- Direct submission to App Store and Google Play
+- One-click deployment with built-in CI/CD pipelines
+- Over-the-air updates without app store review
 
 ### **25+ Native Device Features**
 
@@ -124,23 +118,18 @@ Automatic CSS variables for device-specific layouts:
 
 Use natural language to create your React web app:
 
-* *"Create a task management app with user authentication"*
-
-* *"Add a dashboard with charts and data visualization"*
-
-* *"Include a settings page with dark mode toggle"*
+- _"Create a task management app with user authentication"_
+- _"Add a dashboard with charts and data visualization"_
+- _"Include a settings page with dark mode toggle"_
 
 ### **2. Add Native Features via AI**
 
 Ask Lovable to integrate Despia native capabilities:
 
-* *"Add haptic feedback when users complete a task"*
-
-* *"Enable push notifications for task reminders"*
-
-* *"Add biometric authentication for app security"*
-
-* *"Include background location tracking for delivery features"*
+- _"Add haptic feedback when users complete a task"_
+- _"Enable push notifications for task reminders"_
+- _"Add biometric authentication for app security"_
+- _"Include background location tracking for delivery features"_
 
 Lovable will automatically generate the proper `despia()` function calls in your React components.
 
@@ -192,52 +181,39 @@ if (navigator.userAgent.includes('despia')) {
 
 ### **5. Deploy Everywhere**
 
-* **Web**: Deploy your Lovable app to any hosting platform
-
-* **Mobile**: Use Despia's one-click deployment to app stores
-
-* **Updates**: Push changes instantly with OTA updates
+- **Web**: Deploy your Lovable app to any hosting platform
+- **Mobile**: Use Despia's one-click deployment to app stores
+- **Updates**: Push changes instantly with OTA updates
 
 ## **AI-Powered Mobile Development**
 
 **Natural Language Native Features**: Request any native functionality in plain English and Lovable generates the implementation:
 
-* *"Add camera access for profile photos"*
-
-* *"Add home screen widgets showing user stats"*
-
-* *"Include in-app purchase for premium features"*
+- _"Add camera access for profile photos"_
+- _"Add home screen widgets showing user stats"_
+- _"Include in-app purchase for premium features"_
 
 ## **Complete Ownership**
 
-* **Source Code Export**: Get complete Xcode and Android Studio projects
-
-* **No Vendor Lock-in**: Full access to generated code with no restrictions
-
-* **GitHub Integration**: Lovable syncs your code to GitHub automatically
-
-* **Extensible**: Add any npm packages or custom native code
+- **Source Code Export**: Get complete Xcode and Android Studio projects
+- **No Vendor Lock-in**: Full access to generated code with no restrictions
+- **GitHub Integration**: Lovable syncs your code to GitHub automatically
+- **Extensible**: Add any npm packages or custom native code
 
 ## **Performance & Reliability**
 
-* **60fps GPU-accelerated rendering** on native devices
-
-* **Command queuing** ensures sequential execution
-
-* **Variable watching** for async native responses
-
-* **Type safety** with full TypeScript support
-
-* **Automatic timeout handling** and error management
+- **60fps GPU-accelerated rendering** on native devices
+- **Command queuing** ensures sequential execution
+- **Variable watching** for async native responses
+- **Type safety** with full TypeScript support
+- **Automatic timeout handling** and error management
 
 ## **Need Help?**
 
-* **Lovable Support**: Use the built-in AI assistant for development guidance
+- **Lovable Support**: Use the built-in AI assistant for development guidance
+- **Despia Support**: Contact [**support@despia.com**](mailto:support@despia.com) for native integration questions
+- **Documentation**: Visit [docs.despia.com](https://docs.despia.com/) for detailed native API reference
 
-* **Despia Support**: Contact [**support@despia.com**](mailto:support@despia.com) for native integration questions
-
-* **Documentation**: Visit [docs.despia.com](https://docs.despia.com/) for detailed native API reference
-
-***
+---
 
 **Ready to transform your web app?** Start building with Lovable, add native features with a simple `npm install despia-native`, and deploy to app stores in a weekend.
