--- a/lovable/how-it-works.mdx
+++ b/lovable/how-it-works.mdx
@@ -4,6 +4,7 @@ label: "How it Works"
 slug: "how-it-works"
 description: "Add real native device features to your Lovable-generated app and deploy to App Stores - no native code required."
 visibility: "PUBLIC"
+mode: "custom"
 ---
 
 <iframe src="https://www.youtube.com/embed/n5C5EvdJ584" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
