Documentation edits made through Mintlify web editor

--- a/lovable/how-it-works.mdx
+++ b/lovable/how-it-works.mdx
@@ -217,4 +217,6 @@ if (navigator.userAgent.includes('despia')) {
 
 ---
 
-**Ready to transform your web app?** Start building with Lovable, add native features with a simple `npm install despia-native`, and deploy to app stores in a weekend.
+**Ready to transform your web app?**
+
+Start building with Lovable, add native features with a simple `npm install despia-native`, and deploy to app stores in a weekend.
