Documentation edits made through Mintlify web editor

--- a/lovable/how-it-works.mdx
+++ b/lovable/how-it-works.mdx
@@ -2,4 +2,5 @@
 title: "How it Works"
 icon: "lightbulb"
 description: "Add real native device features to your Lovable-generated app and deploy to App Stores - no native code required."
+mode: "custom"
 ---
