Documentation edits made through Mintlify web editor

--- a/lovable/native-features/user-agent.mdx
+++ b/lovable/native-features/user-agent.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Platform Detection"
+title: "User Agent"
 icon: "lightbulb"
 description: "Detect whether your app is running in the Despia native runtime and identify the platform (iOS or Android) by checking the user agent string."
 ---
