--- a/lovable/native-features/o-auth-2-0/tik-tok-auth.mdx
+++ b/lovable/native-features/o-auth-2-0/tik-tok-auth.mdx
@@ -3,6 +3,8 @@ title: "TikTok Auth"
 description: "Access the real native TikTok OAuth 2.0 using the ASWebAuthSession and Chrome Custom Tabs via a simple to use SDK"
 ---
 
+<iframe src="https://www.youtube.com/embed/cFXTMf_kgY4" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
+
 <Card title="Lovable Prompt" icon="sparkles">
   This setup is more technical and you'll need to paste the following prompt, which includes full scaffolding, into Lovable to get good results:
 
