Documentation edits made through Mintlify web editor

--- a/lovable/native-features/restore-purchase.mdx
+++ b/lovable/native-features/restore-purchase.mdx
@@ -3,6 +3,8 @@ title: "Restore Purchase"
 description: "Restore and retrieve a user's complete purchase history from Apple App Store and Google Play Store using the Despia SDK."
 ---
 
+<iframe src="https://www.youtube.com/embed/N5KsbfD8wqU" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
+
 <Card title="Lovable Prompt" icon="sparkles">
   Add restore purchases functionality to my app using the Despia SDK from: [**https://www.npmjs.com/package/despia-native**](https://www.npmjs.com/package/despia-native)
 
