Documentation edits made through Mintlify web editor

--- a/lovable/native-features/app-settings.mdx
+++ b/lovable/native-features/app-settings.mdx
@@ -1,6 +1,7 @@
 ---
 title: "App Settings"
 description: "Open your app's native settings page directly from within your Lovable mobile app to guide users to permission controls."
+icon: "gear"
 ---
 
 <Note>
