--- a/lovable/native-features/clipboard.mdx
+++ b/lovable/native-features/clipboard.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Clipboard"
 description: "Retrieve clipboard content from users' devices within your Lovable application."
+icon: "copy"
 ---
 
 <iframe src="https://www.youtube.com/embed/zoWQKLhlVp4" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
