--- a/lovable/native-features/home-widgets.mdx
+++ b/lovable/native-features/home-widgets.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Home Widgets"
 description: "Display dynamic SVG content in iOS home screen widgets with real-time data updates and user personalization through your Lovable mobile app."
+icon: "border-all"
 ---
 
 <iframe src="https://www.youtube.com/embed/oAUh41pgFOA" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
