--- a/lovable/native-features/print-documents.mdx
+++ b/lovable/native-features/print-documents.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Print Documents"
 description: "Enable native printing capabilities in your Lovable mobile app, allowing users to print images and PDFs directly from their device using the device's built-in print system."
+icon: "print"
 ---
 
 <iframe src="https://www.youtube.com/embed/EHa5lz6cyP4" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
