--- a/lovable/native-features/quick-actions.mdx
+++ b/lovable/native-features/quick-actions.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Quick Actions"
 description: "Create native mobile application shortcuts that allow users to access specific workflows in your Lovable app without even opening it."
+icon: "align-left"
 ---
 
 <iframe src="https://www.youtube.com/embed/UDbmAj5yWso" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
