--- a/lovable/native-features/restore-purchase.mdx
+++ b/lovable/native-features/restore-purchase.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Restore Purchase"
 description: "Restore and retrieve a user's complete purchase history from Apple App Store and Google Play Store using the Despia SDK."
+icon: "recycle"
 ---
 
 <iframe src="https://www.youtube.com/embed/N5KsbfD8wqU" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
