--- a/lovable/native-features/screen-brightness.mdx
+++ b/lovable/native-features/screen-brightness.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Screen Brightness"
 description: "Control device scanning behavior with configurable modes (auto, on, off) and automatic screen brightness adjustment through your Lovable mobile app using the Despia SDK."
+icon: "lightbulb"
 ---
 
 <iframe src="https://www.youtube.com/embed/lP9ZkgGYcEE" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
