--- a/lovable/native-features/share-dialog.mdx
+++ b/lovable/native-features/share-dialog.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Share Dialog"
 description: "Enable native social sharing capabilities with customizable message and URL parameters through your Lovable mobile app using the Despia SDK."
+icon: "share-from-square"
 ---
 
 <iframe src="https://www.youtube.com/embed/P1pMZvdu89s" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
