--- a/lovable/native-features/simple-storage.mdx
+++ b/lovable/native-features/simple-storage.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Simple Storage"
 description: "Persist data directly on the user's device using simple read/write commands with the Despia SDK."
+icon: "database"
 ---
 
 <Card title="Lovable Prompt" icon="sparkles">
