--- a/lovable/native-features/file-sharing.mdx
+++ b/lovable/native-features/file-sharing.mdx
@@ -1,6 +1,7 @@
 ---
 title: "File Sharing"
 description: "Enable native file sharing capabilities in your Lovable mobile app, allowing users to share files of any type through their device's built-in sharing system."
+icon: "file-arrow-up"
 ---
 
 <iframe src="https://www.youtube.com/embed/bnc59WIsDCQ" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
