--- a/lovable/native-features/share-extension.mdx
+++ b/lovable/native-features/share-extension.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Share Extension"
 description: "Access shared content (images and text) from other apps when your Lovable application is opened via share functionality."
+icon: "file-import"
 ---
 
 <iframe src="https://www.youtube.com/embed/KtYBtKJY4l0" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
