--- a/lovable/native-features/store-location.mdx
+++ b/lovable/native-features/store-location.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Store Location"
 description: "Access the user's current store location for location-based services, regional content, and localized experiences in your Lovable application."
+icon: "globe"
 ---
 
 <iframe src="https://www.youtube.com/embed/jRK3xfWqi0w" title="YouTube video player" frameborder="0" className="w-full aspect-video rounded-xl" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen />
