Documentation edits made through Mintlify web editor

--- a/lovable/native-features/screenshot.mdx
+++ b/lovable/native-features/screenshot.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Screenshot"
 description: "Capture full page screenshots and save them directly to the device's photo gallery through your Lovable mobile app using the Despia SDK."
-icon: "print"
+icon: "border-top-left"
 ---
 
 <Danger>
